Bug 364253 - Inconsistent icons for thumbnails compared to normal icons in Dolphin
Summary: Inconsistent icons for thumbnails compared to normal icons in Dolphin
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: default (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-12 18:08 UTC by Martin Sandsmark
Modified: 2016-06-13 06:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing the issue. (95.79 KB, image/png)
2016-06-12 18:09 UTC, Martin Sandsmark
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Sandsmark 2016-06-12 18:08:47 UTC
If running Dolphin without the plasma-integration platform plugin, the icons for folders are different from the icon used for the thumbnails.

I tried tracking it down, and I got as far as to figuring out that the difference is that the "normal" (non-thumbnail) icons are resolved with QIcon, while the thumbnailer in kio-extras uses KIconLoader.

When using the plasma-integration platform plugin QIcon uses KIconLoader indirectly, but when using any other plugin it uses some default loader backend in Qt. I tried looking at why this doesn't load the same icon as KIconLoader (it seems to load for the wrong size, for some reason).

While this is a bug in Qt, KIconThemes or the Breeze icon set (specifying something wrong in the .desktop files?), I haven't seen this bug surface anywhere else. And I think it makes sense to "normalize" kio-extras to use QIcon as well, when running under plasma it will still use KIconLoader indirectly.

Reproducible: Always
Comment 1 Martin Sandsmark 2016-06-12 18:09:18 UTC
Created attachment 99476 [details]
Screenshot showing the issue.
Comment 2 Martin Sandsmark 2016-06-12 18:35:44 UTC
https://git.reviewboard.kde.org/r/128164/
Comment 3 Martin Sandsmark 2016-06-13 06:56:46 UTC
Git commit cfcb9f757111a55f6aec23ef97a4b5c03e234576 by Martin T. H. Sandsmark.
Committed on 13/06/2016 at 06:54.
Pushed by sandsmark into branch 'master'.

Use QIcon for loading icon for folder thumbnail for consistensy

When using e. g. Dolphin, which uses QIcon, the thumbnails for folders
would be inconsistent with the normal folder icons.
REVIEW: 128164

M  +3    -3    thumbnail/thumbnail.cpp

http://commits.kde.org/kio-extras/cfcb9f757111a55f6aec23ef97a4b5c03e234576