Use QIcon for loading icon for folder thumbnail for consistensy

When using e. g. Dolphin, which uses QIcon, the thumbnails for folders
would be inconsistent with the normal folder icons.

BUG: 364253
REVIEW: 128164